allow theme option to be specified

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                'useMonospaceFont' : false,                      // Use monospaced fonts
                'noColors'         : false,                      // Disable background colors on author text
                'userColor'        : false,                      // The background color of this authors text in hex format IE #000
+               'theme'            : false,                      // The theme name to use (ep_themes)
                'hideQRCode'       : false,                      // Hide QR code
                'alwaysShowChat'   : false,                      // Always show the chat on the UI
                'width'            : 100,                        // The width of the embedded IFrame
